oar (2.5.1-3) UNRELEASED; urgency=low

  * Fix the debian watch file.
  * oar-server-mysql: Remove phpmyadmin as suggestion.
  * Fix the dependencies on libdbi-perl. 

 -- Philippe Le Brouster <plb@nebkha.net>  Mon, 12 Mar 2012 13:12:17 +0100

oar (2.5.1-2) unstable; urgency=low

  * First upload to the debian archive (Closes: #663558)  
  * Bump the standards version.
  * Change the oar-api package description.

 -- Philippe Le Brouster <plb@nebkha.net>  Mon, 12 Mar 2012 13:02:11 +0100

oar (2.5.1-1) UNRELEASED; urgency=low

  * New upstream release. 

 -- Philippe Le Brouster <philippe.le-brouster@imag.fr>  Fri, 13 Jan 2012 18:15:09 +0100

oar (2.5.0+rc2-1) UNRELEASED; urgency=low

  * New upstream release. 
  * Remove the symlink creation for the apache2 configuration. (already done
    by the setup scripts).

 -- Philippe Le Brouster <philippe.le-brouster@imag.fr>  Mon, 19 Dec 2011 22:59:22 +0100

oar (2.5.0+rc1-1) UNRELEASED; urgency=low

  * Initial Release.

 -- Philippe Le Brouster <philippe.le-brouster@imag.fr>  Thu, 08 Dec 2011 11:06:45 +0100